fixed work desc visibility on nav

--- a/public/App.css
+++ b/public/App.css
@@ -267,6 +267,7 @@ canvas {
     visibility: hidden;
     /* background-color: white; */
     font-size: 0.9em;
+    color:white;
 }
 
 /*
